--- a/client/src/style.css
+++ b/client/src/style.css
@@ -17,6 +17,7 @@
 .card:hover {
   transform: scale(1.05); /* Slight zoom-in effect */
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
 
 .home-container {
   position: relative;
@@ -26,5 +27,4 @@
 .welcome-message {
   background: hsla(0, 0%, 100%, 0.218);
   border-radius: 10px;
-
 }
